impl dynamoDB SPOT query/scan with filters
